# mtp2lastfm

./: .svnignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  createDeb.sh  mtp2lastfm.pro
debian/: changelog  control  copyright
src/: Makefile.am  config.h  device.cpp  device.h  main.cpp  scrobbler.cpp  scrobbler.h  track.cpp  track.h  utils.cpp  utils.h
src/db/: base_sql_structure.h  sqliteorb.cpp  sqliteorb.h  sqliteorm.cpp  sqliteorm.h
src/model/: dbconfig.cpp  dbconfig.h  device.cpp  device.h  md5.cpp  md5.h  qintitem.cpp  qintitem.h  track.cpp  track.h
src/net/: versionchecker.cpp  versionchecker.h
src/resources/: resources.qrc
src/threads/: devicepoller.cpp  devicepoller.h  loaderthread.cpp  loaderthread.h  scrobbler.cpp  scrobbler.h  tracksimporter.cpp  tracksimporter.h
src/view/: authenticationdialog.cpp  authenticationdialog.h  authenticationdialog.ui  configurationloading.cpp  configurationloading.h  configurationloading.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newversiondialog.cpp  newversiondialog.h  newversiondialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  scrobblerprogress.cpp  scrobblerprogress.h  scrobblerprogress.ui  tracksimport.cpp  tracksimport.h  tracksimport.ui
src/xsd/: createBinder.sh  mtp2lastfm.cpp  mtp2lastfm.h  mtp2lastfm.xsd
